initial insert function
